--- a/ts.html
+++ b/ts.html
@@ -1060,6 +1060,40 @@ body { font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Roboto, Ar
   color: #555;
 }
 
+@media (max-width: 768px) {
+  .comparison-heading {
+    font-size: 18px;
+    margin-bottom: 15px;
+    line-height: 1.4;
+  }
+
+  .comparison-table {
+    font-size: 13px;
+    min-width: 480px;
+  }
+
+  .comparison-table th, .comparison-table td {
+    padding: 10px 8px;
+    text-align: left;
+  }
+
+  .comparison-table-wrapper {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    margin-bottom: 10px;
+  }
+
+  /* Adds subtle horizontal scroll hint on iPhone */
+  .comparison-table-wrapper::after {
+    content: '← Swipe to view more →';
+    display: block;
+    text-align: center;
+    color: #666;
+    font-size: 12px;
+    padding-top: 8px;
+  }
+}
+
 /* sticky footer */
 .sticky-footer {
       display: none; /* Hidden by default */
