--- a/ts.html
+++ b/ts.html
@@ -1016,39 +1016,62 @@ body { font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Roboto, Ar
   text-align: center;
 }
 
-/* comparision section styles */
+/* ---------- Comparison Section ---------- */
+.comparison-section {
+  padding: 30px 20px;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  background: #ffffff;
+}
 
 .comparison-heading {
-  font-size: 20px;
+  font-size: 22px;
+  color: #e60000;
   margin-bottom: 20px;
+  line-height: 1.4;
 }
 
 .comparison-heading .blue-text {
   color: #0072bc;
 }
 
-.comparison-heading {
-  color: #e60000;
+/* ✅ Scrollable Wrapper (Fixes iPhone Overflow) */
+.comparison-table-wrapper {
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  padding-bottom: 6px;
 }
 
+/* ✅ Table Layout */
 .comparison-table {
   width: 100%;
   border-collapse: collapse;
-  margin: 0 auto;
-  max-width: 100%;
   font-size: 14px;
+  table-layout: fixed;
+  word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 .comparison-table th,
 .comparison-table td {
   border: 1px solid #ccc;
   padding: 12px 10px;
-  text-align: center;
+  text-align: left;
+  vertical-align: top;
+  white-space: normal;
+  line-height: 1.4;
 }
 
 .comparison-table thead th {
   background-color: #0072bc;
   color: #fff;
+  text-align: center;
+  font-weight: 600;
 }
 
 .comparison-table .highlight-row {
@@ -1060,32 +1083,33 @@ body { font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Roboto, Ar
   color: #555;
 }
 
+/* ✅ iPhone Fix - Prevent Zoom Cutoff */
+@supports (-webkit-touch-callout: none) {
+  .comparison-table {
+    width: 100%;
+    min-width: auto !important;
+    table-layout: fixed;
+  }
+}
+
+/* ✅ Mobile adjustments */
 @media (max-width: 768px) {
   .comparison-heading {
     font-size: 18px;
-    margin-bottom: 15px;
-    line-height: 1.4;
   }
 
   .comparison-table {
     font-size: 13px;
-    min-width: 480px;
   }
 
-  .comparison-table th, .comparison-table td {
+  .comparison-table th,
+  .comparison-table td {
     padding: 10px 8px;
-    text-align: left;
   }
 
-  .comparison-table-wrapper {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    margin-bottom: 10px;
-  }
-
-  /* Adds subtle horizontal scroll hint on iPhone */
+  /* Subtle scroll hint on mobile */
   .comparison-table-wrapper::after {
-    content: '← Swipe to view more →';
+    content: '← Swipe left or right to view all columns →';
     display: block;
     text-align: center;
     color: #666;
@@ -1093,6 +1117,7 @@ body { font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Roboto, Ar
     padding-top: 8px;
   }
 }
+
 
 /* sticky footer */
 .sticky-footer {
