--- a/ts.html
+++ b/ts.html
@@ -1410,10 +1410,11 @@ body { font-family: "Montserrat", system-ui, -apple-system, Segoe UI, Roboto, Ar
   </nav>
 
   <!-- Call button -->
-  <a href="tel: +91 89297 89231" class="call-button">
-   
-     +91 89297 89231
-  </a>
+ <a href="tel: +91 89297 89231" class="cta-button">
+        <!-- phone icon -->
+        <svg viewBox="0 0 24 24"><path d="M6.6 10.8c1.2 2.4 3 4.2 5.4 5.4l1.8-1.8c.3-.3.8-.4 1.1-.2 1.2.5 2.4.8 3.6.8.4 0 .7.3.7.7v3.6c0 .4-.3.7-.7.7C10.3 20 4 13.7 4 5.7c0-.4.3-.7.7-.7H8.3c.4 0 .7.3.7.7 0 1.2.3 2.4.8 3.6.2.4.1.8-.2 1.1l-1.8 1.8z"/></svg>
+        Call Now
+      </a>
 
   <!-- Mobile menu toggle (right side) -->
   <button class="nav-toggle" aria-controls="siteNav" aria-expanded="false" aria-label="Open menu">
